# very_primitive_tables

./: Cargo.toml  README.md  test.csv
src/: lib.rs  main.rs  vec2d.rs
