[package]
name = "very_primitive_tables"
description = "Primitive pretty-printing functionality for tables. This is mainly meant as a way for me to learn how to publish code. There are surely other options."
authors = ["David Palensky <david.palensky@gmail.com>"]
version = "0.1.2"
edition = "2021"
exclude = ["main.rs", "test.csv"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/davidpalensky/very_primitive_tables/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
